<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_padding"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btn_lifecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_title_lifecycle" />

    <Button
        android:id="@+id/btn_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_title_intent" />

    <Button
        android:id="@+id/btn_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_title_fragment" />

    <Button
        android:id="@+id/btn_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_title_recyclerview" />

    <Button
        android:id="@+id/btn_view_binding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_title_view_binding" />

    <Button
        android:id="@+id/btn_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_title_navigation" />

</LinearLayout>